trunk/Archive2/c5/42e2560fad7fe4/output
main.cpp:19:13: error: default initialization of an object of const type 'const A' requires a user-provided default constructor
    const A a;
            ^
1 error generated.
